--- a/syllabus.html
+++ b/syllabus.html
@@ -117,7 +117,7 @@
 <col class="field-name" />
 <col class="field-body" />
 <tbody valign="top">
-<tr class="field-odd field"><th class="field-name">Instructor:</th><td class="field-body">Dr. Danel Shanahan</td>
+<tr class="field-odd field"><th class="field-name">Instructor:</th><td class="field-body">Dr. Daniel Shanahan</td>
 </tr>
 <tr class="field-even field"><th class="field-name">Office:</th><td class="field-body">Room 129 (basement), Kerchof Hall (Math Building; on C parking lot across from Clark Hall)</td>
 </tr>
