--- a/syllabus.html
+++ b/syllabus.html
@@ -148,13 +148,12 @@ We will cover a wide array of composers (Beethoven, Wagner, Liszt,
 Schumann, Berlioz, and Verdi, among others), genres (solo instrumental, art song,
 instrumental chamber music, symphony, opera), nations and regions (France,
 Germany and Austria, Italy, Russia, North America), and topics (salon culture, virtuosity,
-folk music, orientalism, musical meaning, etc.).
-|
-As we will be reading scores throughout the semester, the ability to
-read scores is essential. Theory 1 (MUSI 3310) strongly recommended as a prerequisite.
-|
-For music majors: This course fulfills either the
+folk music, orientalism, musical meaning, etc.).</p>
+<p>As we will be reading scores throughout the semester, the ability to
+read scores is essential. Theory 1 (MUSI 3310) strongly recommended as a prerequisite.</p>
+<p>For music majors: This course fulfills either the
 first historical requirement or an elective requirement.
+|
 |
 Enrollment deadlines: The last day in the College to add a course is Tuesday,
 September 10th; the last day to drop a course is Wednesday, September 11th;
