--- a/syllabus.html
+++ b/syllabus.html
@@ -152,10 +152,8 @@ folk music, orientalism, musical meaning, etc.).</p>
 <p>As we will be reading scores throughout the semester, the ability to
 read scores is essential. Theory 1 (MUSI 3310) strongly recommended as a prerequisite.</p>
 <p>For music majors: This course fulfills either the
-first historical requirement or an elective requirement.
-|
-|
-Enrollment deadlines: The last day in the College to add a course is Tuesday,
+first historical requirement or an elective requirement.</p>
+<p>Enrollment deadlines: The last day in the College to add a course is Tuesday,
 September 10th; the last day to drop a course is Wednesday, September 11th;
 the last day to withdraw from a course is Tuesday, October 22nd.</p>
 </div>
