--- a/assignments/comparisonRubrix.html
+++ b/assignments/comparisonRubrix.html
@@ -88,26 +88,20 @@
 music** (50)</dd>
 </dl>
 </td>
-<td><p class="first">Actively engages with the
+<td>Actively engages with the
 music; attempts to understand
 the basic underpinnings of
 the pieces; examines musical
 relationships between the
 pieces in a sophisticated
-manner.</p>
-<blockquote class="last">
-<div>(45-50)</div></blockquote>
-</td>
-<td><p class="first">Engages with the music, but
+manner. (45-50)</td>
+<td>Engages with the music, but
 the focus is
 disproportionately on one
 piece. Does a good job at
 examining the similarities &amp;
 differences in the approaches
-of each piece.</p>
-<blockquote class="last">
-<div>(35-45)</div></blockquote>
-</td>
+of each piece. (35-45)</td>
 <td>Discusses the music
 adequately, but could focus
 more on this area; focuses on
@@ -115,90 +109,65 @@ superficial musical elements;
 comparison needs to discuss
 the relationship (or lack
 thereof) between the pieces
-in more depth.        (20-35)</td>
-<td><p class="first">Description is vague,
+in more depth. (20-35)</td>
+<td>Description is vague,
 unclear that there was more
 than a passive engagement
 with the music. The comparison
 between the works fails to go
 beyond basic historical
-facts.</p>
-<blockquote class="last">
-<div>(0-20)</div></blockquote>
-</td>
+facts. (0-20)</td>
 </tr>
 <tr class="row-odd"><td><dl class="first last docutils">
 <dt><a href="#id3"><span class="problematic" id="id4">**</span></a>Historical</dt>
 <dd>Context** (30)</dd>
 </dl>
 </td>
-<td><p class="first">Shows a sophisticated
+<td>Shows a sophisticated
 understanding of the relevant
-culture, genre, and topic.</p>
-<blockquote class="last">
-<div>(25-30)</div></blockquote>
-</td>
-<td><p class="first">Shows a decent understanding
+culture, genre, and topic.
+(25-30)</td>
+<td>Shows a decent understanding
 of the relevant culture,
 genre, and topic, but it
-could be improved.</p>
-<blockquote class="last">
-<div>(20-25)</div></blockquote>
-</td>
-<td><p class="first">Shows a slightly uneven
+could be improved. (20-25)</td>
+<td>Shows a slightly uneven
 understanding of the relevant
 culture, genre, and topic,
 and it is clear that there
-are a few misconceptions.</p>
-<blockquote class="last">
-<div>(10-20)</div></blockquote>
-</td>
-<td><p class="first">Does not provide context for
+are a few misconceptions.
+(10-20)</td>
+<td>Does not provide context for
 the music; it his clear
 that there exist many
 misunderstandings about the
-topic.</p>
-<blockquote class="last">
-<div>(0-10)</div></blockquote>
-</td>
+topic. (0-10)</td>
 </tr>
 <tr class="row-even"><td><a href="#id5"><span class="problematic" id="id6">**</span></a>Writing**(20)</td>
-<td><p class="first">Coherently organized
+<td>Coherently organized
 and has a natural flow and
 logic. There are no
 grammatical or spelling
 mistakes, and the writing is
-clear and persuasive.</p>
-<blockquote class="last">
-<div>(15-20)</div></blockquote>
-</td>
-<td><p class="first">Paper is well organized
+clear and persuasive. (15-20)</td>
+<td>Paper is well organized
 overall, and the argument is
 easy to follow. There are
 only a few minor spelling
 or grammatical errors; writing
 is clear but the structure
 and logic could use a bit of
-improvement.</p>
-<blockquote class="last">
-<div>(10-15)</div></blockquote>
-</td>
-<td><p class="first">Only a few spelling or
+improvement.(10-15)</td>
+<td>Only a few spelling or
 grammatical errors, but the
 logic is difficult to follow.
 The overall argument could be
-improved.</p>
-<blockquote class="last">
-<div>(5-10)</div></blockquote>
-</td>
-<td><p class="first">Contains a number of spelling
+improved. (5-10)</td>
+<td>Contains a number of spelling
 and grammatical errors;
 the argument needs work;
 the logic is very difficult
-to follow.</p>
-<blockquote class="last">
-<div>(0-5)</div></blockquote>
-</td>
+to follow. (0-5)</td>
 </tr>
 </tbody>
 </table>
