--- a/assignments/index.html
+++ b/assignments/index.html
@@ -26,6 +26,7 @@
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <link rel="top" title="MUSI3030 0 documentation" href="../index.html" />
+    <link rel="next" title="&lt;no title&gt;" href="comparisonRubric.html" />
     <link rel="prev" title="First Day of Class: Syllabus and Demonstration of Listening Comparison" href="../lessons/lesson01.html" /> 
   </head>
   <body>
@@ -35,6 +36,9 @@
         <li class="right" style="margin-right: 10px">
           <a href="../genindex.html" title="General Index"
              accesskey="I">index</a></li>
+        <li class="right" >
+          <a href="comparisonRubric.html" title="&lt;no title&gt;"
+             accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="../lessons/lesson01.html" title="First Day of Class: Syllabus and Demonstration of Listening Comparison"
              accesskey="P">previous</a> |</li>
@@ -46,6 +50,9 @@
   <h4>Previous topic</h4>
   <p class="topless"><a href="../lessons/lesson01.html"
                         title="previous chapter">First Day of Class: Syllabus and Demonstration of Listening Comparison</a></p>
+  <h4>Next topic</h4>
+  <p class="topless"><a href="comparisonRubric.html"
+                        title="next chapter">&lt;no title&gt;</a></p>
   <h3>This Page</h3>
   <ul class="this-page-menu">
     <li><a href="../_sources/assignments/index.txt"
@@ -93,6 +100,9 @@
         <li class="right" style="margin-right: 10px">
           <a href="../genindex.html" title="General Index"
              >index</a></li>
+        <li class="right" >
+          <a href="comparisonRubric.html" title="&lt;no title&gt;"
+             >next</a> |</li>
         <li class="right" >
           <a href="../lessons/lesson01.html" title="First Day of Class: Syllabus and Demonstration of Listening Comparison"
              >previous</a> |</li>
