--- a/assignments/comparisonRubric.html
+++ b/assignments/comparisonRubric.html
@@ -74,7 +74,8 @@
         <div class="bodywrapper">
           <div class="body">
             
-  <table border="1" class="docutils">
+  <p>Below is an example of the scoring rubric for the 500 word listening comparisons.</p>
+<table border="1" class="docutils">
 <colgroup>
 <col width="11%" />
 <col width="22%" />
