--- a/assignments/comparisonRubric.html
+++ b/assignments/comparisonRubric.html
@@ -92,12 +92,9 @@
 </tr>
 </thead>
 <tbody valign="top">
-<tr class="row-even"><td><dl class="first last docutils">
-<dt><a href="#id1"><span class="problematic" id="id2">**</span></a>Engagement</dt>
-<dd>with the
-music** (50)</dd>
-</dl>
-</td>
+<tr class="row-even"><td>Engagement
+with the
+music** (50)</td>
 <td>Actively engages with the
 music; attempts to understand
 the basic underpinnings of
@@ -128,11 +125,8 @@ between the works fails to go
 beyond basic historical
 facts. (0-20)</td>
 </tr>
-<tr class="row-odd"><td><dl class="first last docutils">
-<dt><a href="#id3"><span class="problematic" id="id4">**</span></a>Historical</dt>
-<dd>Context** (30)</dd>
-</dl>
-</td>
+<tr class="row-odd"><td>Historical
+Context (30)</td>
 <td>Shows a sophisticated
 understanding of the relevant
 culture, genre, and topic.
@@ -153,7 +147,7 @@ that there exist many
 misunderstandings about the
 topic. (0-10)</td>
 </tr>
-<tr class="row-even"><td><a href="#id5"><span class="problematic" id="id6">**</span></a>Writing**(20)</td>
+<tr class="row-even"><td>Writing   (20)</td>
 <td>Coherently organized
 and has a natural flow and
 logic. There are no
