--- a/syllabus.html
+++ b/syllabus.html
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="top" title="MUSI3030 0 documentation" href="index.html" />
     <link rel="next" title="Lessons" href="lessons/index.html" />
-    <link rel="prev" title="Welcome to class website for MUSI3030 (Nineteenth-Century Music)" href="index.html" /> 
+    <link rel="prev" title="Welcome to the class website for MUSI3030 (Studies in Nineteenth-Century Music)" href="index.html" /> 
   </head>
   <body>
     <div class="related">
@@ -40,7 +40,7 @@
           <a href="lessons/index.html" title="Lessons"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="index.html" title="Welcome to class website for MUSI3030 (Nineteenth-Century Music)"
+          <a href="index.html" title="Welcome to the class website for MUSI3030 (Studies in Nineteenth-Century Music)"
              accesskey="P">previous</a> |</li>
         <li><a href="index.html">MUSI3030 0 documentation</a> &raquo;</li> 
       </ul>
@@ -83,7 +83,7 @@
 
   <h4>Previous topic</h4>
   <p class="topless"><a href="index.html"
-                        title="previous chapter">Welcome to class website for MUSI3030 (Nineteenth-Century Music)</a></p>
+                        title="previous chapter">Welcome to the class website for MUSI3030 (Studies in Nineteenth-Century Music)</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="lessons/index.html"
                         title="next chapter">Lessons</a></p>
@@ -366,9 +366,9 @@ for every day they are late.</p>
 (8/29)</td>
 <td>Beethoven</td>
 <td><p class="first">Sign up for Listening Comparison Presentations.</p>
-<p class="last"><strong>Due</strong>:Read Taruskin, &#8220;The First Romantics&#8221; on Collab.
-Listen to Beethoven, Symphony No.3 in E-flat major (&#8220;Eroica&#8221;)
-Answer Question Sheet No. 1</p>
+<p><strong>Due</strong>:Read Taruskin, &#8220;The First Romantics&#8221; on Collab.
+Listen to Beethoven, Symphony No.3 in E-flat major (&#8220;Eroica&#8221;)</p>
+<p class="last">Answer Question Sheet No. 1</p>
 </td>
 </tr>
 <tr class="row-even"><td>2.T
@@ -717,7 +717,7 @@ I will make every effort to accommodate special needs.</p>
           <a href="lessons/index.html" title="Lessons"
              >next</a> |</li>
         <li class="right" >
-          <a href="index.html" title="Welcome to class website for MUSI3030 (Nineteenth-Century Music)"
+          <a href="index.html" title="Welcome to the class website for MUSI3030 (Studies in Nineteenth-Century Music)"
              >previous</a> |</li>
         <li><a href="index.html">MUSI3030 0 documentation</a> &raquo;</li> 
       </ul>
