--- a/lessons/historyChange.html
+++ b/lessons/historyChange.html
@@ -193,7 +193,8 @@ Like phonemes in languages or dialects,
 they slowly mutate, and shift intrinsically.</li>
 <li>Rapid change is facilitated by an external event.
 Shakespeare coining the word “assassinate.”
-The creation of Esperanto, or the written Cherokee language.</li>
+Other examples might include
+the creation of Esperanto, or the advent of the <em>written</em> Cherokee language.</li>
 </ul>
 </div></blockquote>
 </li>
