--- a/lessons/historyChange.html
+++ b/lessons/historyChange.html
@@ -101,9 +101,7 @@
 only now as an explanation of the origins of genius. (1939, p.85)</p>
 <blockquote>
 <div><ul>
-<li><ol class="first upperalpha simple" start="7">
-<li>Biani writes in 1828 of Palestrina’s “god-given genius”.</li>
-</ol>
+<li><p class="first">Biani writes in 1828 of Palestrina’s “god-given genius”.</p>
 </li>
 <li><p class="first">Historiographer Warren Allen (writes that these “were not figures
 of speech, but ‘historical fact.’” (1939/1962, p.87)</p>
