--- a/lessons/historyChange.html
+++ b/lessons/historyChange.html
@@ -134,18 +134,22 @@ Kiesewetter thought were arbitrary date demarcations</p>
 <li><p class="first">Herbert Spencer (1850) writes that “advancement
 is due to the working of a universal law.”</p>
 <blockquote>
-<div><ul class="simple">
-<li>Spencer’s laws of progress and evolution was appealing to music historians.</li>
-<li>It allowed them to move beyond chronicling men and events,
+<div><ul>
+<li><p class="first">Spencer’s laws of progress and evolution was appealing to music historians.</p>
+</li>
+<li><p class="first">It allowed them to move beyond chronicling men and events,
 but to speak of music as an evolving organism which is
 “creating itself, developing itself and changing itself
 by virtue of various principles which are unfolded,
-each in its turn.” (Spencer, 1852 p. 145)</li>
-<li>“The progress of this somewhat immature period</li>
-</ul>
-<p>shows the inevitable tendency of all things from
+each in its turn.” (Spencer, 1852 p. 145)</p>
+<blockquote>
+<div><p>“The progress of this somewhat immature period
+shows the inevitable tendency of all things from
 homogeneity towards diversity and definiteness.”
 (Parry, The Evolution of Art Music, 1893, p.169)</p>
+</div></blockquote>
+</li>
+</ul>
 </div></blockquote>
 </li>
 </ul>
