--- a/syllabus.html
+++ b/syllabus.html
@@ -407,7 +407,7 @@ barbiere di Siviglia</em></p>
 <ul class="last simple">
 <li>&#8220;Gretchen am Spinnrade&#8221; (song)</li>
 <li>&#8220;Erlkonig&#8221;(song)</li>
-<li><em>String Quartet in C major</em></li>
+<li><em>String Quintet in C major</em></li>
 </ul>
 </td>
 </tr>
